// Version
syntax = "proto3";

// Package name
option go_package = "github.com/korvised/ilog-shop";

// Structure
message CredentialReq {
  string accessToken = 1;
}

message CredentialRes {
  bool isValid = 1;
}

message RolesCountReq {}

message RolesCountRes {
  int64 count = 1;
}

// Methods
service AuthGrpcService {
  rpc GetCredential(CredentialReq) returns (CredentialRes);
  rpc GetRolesCount(RolesCountReq) returns (RolesCountRes);
}